
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct svc_req {int dummy; } ;
struct TYPE_5__ {int sequence; int stat; int cookie; } ;
typedef TYPE_1__ nlm4_shareres ;
struct TYPE_6__ {int cookie; } ;
typedef TYPE_2__ nlm4_shareargs ;


 scalar_t__ debug_level ;
 int log_from_addr (char*,struct svc_req*) ;
 int nlm4_granted ;

nlm4_shareres *
nlm4_share_4_svc(nlm4_shareargs *arg, struct svc_req *rqstp)
{
 static nlm4_shareres res;

 if (debug_level)
  log_from_addr("nlm4_share", rqstp);

 res.cookie = arg->cookie;
 res.stat = nlm4_granted;
 res.sequence = 1234356;
 return (&res);
}
